--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ div#scarica, div#scaricatab {
   border-bottom: 1px solid #eee;
 margin-bottom:20px;
 }
+div#scaricatabanalisi {
+  text-align:left;
+  border-bottom: 1px solid #eee;
+margin-bottom:20px;
+}
 p.valdesi {margin-top:30px;}
 
 #macrocategorie .btn.btn-default.btn-lg {
@@ -586,6 +591,7 @@ span.tutto .text-primary{
 /*grafici e dati*/
 p.grafico {font-size:16px}
 h4.grafico {font-size:18px; font-weight:bold;}
+#grafici h3 {font-size:30px; font-weight:bold; margin-top:40px; padding:5px 20px; background:#C50218; color:white;}
 /*grafici e dati*/
 
 /*responsive*/
