--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ h1, h3 { color:#C50218;}
 .slogan h3 {
   font-size:30px;
   color:#333;
+ font-weight: 700;
 }
 .slogan h1 {
   color: #C50218;
@@ -616,6 +617,9 @@ line-height:20px;
     font-weight: bold;
     margin-top: 10px;
 }
+div#macrocategorie {
+    padding: 0;
+}
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
 
     padding-left: 5px;
@@ -623,9 +627,12 @@ line-height:20px;
 
 }
 a.btn.btn-default.btn-lg {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: bold;
 }
 
+span.fa-stack {	
+    font-size: 1.6em;
+}
 }
 
